Attempt to Fix Difference between Local File + Github
Scrollbar appears on github but not on the locally hosted file.

--- a/css/index.css
+++ b/css/index.css
@@ -9,6 +9,8 @@ h5 {
 body {
   height: 100%;
   overflow: hidden;
+  overflow-x: hidden;
+  overflow-y: hidden;
 }
 
 .site-wrapper {
@@ -24,6 +26,8 @@ body {
   background-position: center;
   background-repeat: no-repeat;
   overflow: hidden;
+  overflow-x: hidden;
+  overflow-y: hidden;
   background-color: black;
   background-attachment: fixed;
 }
